--- a/4886A/.vscode/vex_project_settings.json
+++ b/4886A/.vscode/vex_project_settings.json
@@ -1,16 +1,16 @@
 {
 	"extension": {
-		"version": "0.6.0",
+		"version": "0.6.1",
 		"json": 2
 	},
 	"project": {
-		"name": "4886A_24_01",
+		"name": "4886A",
 		"description": "",
-		"creationDate": "9/5/2024, 3:15:48 PM",
+		"creationDate": "Mon, 13 Jan 2025 20:38:37 GMT",
 		"platform": "V5",
 		"language": "python",
 		"slot": 1,
-		"sdkVersion": "V5_1_0_1_19",
+		"sdkVersion": "V5_1_0_1_25",
 		"python": {
 			"main": "src/main.py"
 		}
